# qa-conflict-bot

./: .gitignore  .pr-conflict-bot.toml  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SPEC.md  legion.toml  pyproject.toml
docs/superpowers/plans/: 2026-05-25-qa-mode-m1.md  2026-05-26-org-wide-qa-and-fix-mode.md
docs/superpowers/specs/: 2026-05-25-pr-qa-mode-design.md  2026-05-26-org-wide-qa-and-fix-mode.md
examples/: .env.example  .pr-conflict-bot.toml.example
scripts/: setup-github-app.py
src/pr_conflict_bot/: __init__.py  __main__.py  _e2e_demo.py  alerts.py  codex.py  config.py  git_ops.py  github_api.py  linear.py  llm.py  orchestrator.py  qa_policy.py  server.py  verify.py
src/pr_conflict_bot/qa/: __init__.py  browse.py  detect.py  methodology.py  orchestrator.py  report.py  url_resolver.py
systemd/: pr-conflict-bot.service
tests/: test_alerts.py  test_e2e_demo.py  test_git_ops.py  test_linear.py  test_llm_complete.py  test_orchestrator.py  test_qa_browse.py  test_qa_browse_smoke.py  test_qa_config.py  test_qa_detect.py  test_qa_fix.py  test_qa_methodology.py  test_qa_orchestrator.py  test_qa_policy.py  test_qa_report.py  test_qa_url_resolver.py  test_server.py  test_server_qa_enqueue.py
