[project]
name = "pr-conflict-bot"
version = "0.1.0"
description = "GitHub bot that resolves merge conflicts on PRs using a code-aware LLM (Codex by default)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "pr-conflict-bot contributors" }]
keywords = ["github", "pull-request", "merge-conflict", "codex", "automation", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "aiohttp>=3.9",
    "PyJWT[crypto]>=2.8",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
pr-conflict-bot = "pr_conflict_bot.__main__:main"

[project.urls]
Homepage = "https://github.com/Screddyice/pr-conflict-bot"
Issues = "https://github.com/Screddyice/pr-conflict-bot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_conflict_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
